Correct main pom to avoid trying to upload sources twice
(cherry picked from commit 027bb44b624b9f17ae87f1350d842516e916961b)

--- a/pom.xml
+++ b/pom.xml
@@ -1530,6 +1530,7 @@
             <executions>
                <execution>
                   <phase>verify</phase>
+				  <id>attach-sources</id>
                   <goals>
                      <goal>jar</goal>
                   </goals>
